[workspace]
members = [ "build/nphysics2d", "build/nphysics_testbed2d", "examples2d",
            "build/nphysics3d", "build/nphysics_testbed3d", "examples3d", ]

[profile.release]
#lto = true
#codegen-units = 1

[patch.crates-io]
kiss3d = { path = "../kiss3d" }
ncollide3d = { path = "../ncollide-dev/build/ncollide3d" }
ncollide2d = { path = "../ncollide-dev/build/ncollide2d" }