[package]
name    = "nphysics-examples"
version = "0.1.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]

[dependencies.nphysics2df32]
version = "0.1.0"
path    = "../build/nphysics2df32"

[dependencies.nphysics3df32]
version = "0.1.0"
path    = "../build/nphysics3df32"

[dependencies.graphics2d]
version = "0.1.0"
path    = "./graphics2d"

[dependencies.graphics3d]
version = "0.1.0"
path    = "./graphics3d"

[[bin]]
name = "ball_vee2d"
path = "./balls_vee2d.rs"

[[bin]]
name = "ball_vee3d"
path = "./balls_vee3d.rs"

[[bin]]
name = "bezier_balls3d"
path = "./bezier_balls3d.rs"

[[bin]]
name = "boxes_vee2d"
path = "./boxes_vee2d.rs"

[[bin]]
name = "boxes_vee3d"
path = "./boxes_vee3d.rs"

[[bin]]
name = "compound2d"
path = "./compound2d.rs"

[[bin]]
name = "compound3d"
path = "./compound3d.rs"

[[bin]]
name = "cross2d"
path = "./cross2d.rs"

[[bin]]
name = "cross3d"
path = "./cross3d.rs"

[[bin]]
name = "mesh2d"
path = "./mesh2d.rs"

[[bin]]
name = "mesh3d"
path = "./mesh3d.rs"

[[bin]]
name = "primitives3d"
path = "./primitives3d.rs"

[[bin]]
name = "pyramid2d"
path = "./pyramid2d.rs"

[[bin]]
name = "pyramid3d"
path = "./pyramid3d.rs"

[[bin]]
name = "ragdoll2d"
path = "./ragdoll2d.rs"

[[bin]]
name = "ragdoll3d"
path = "./ragdoll3d.rs"

[[bin]]
name = "wall2d"
path = "./wall2d.rs"

[[bin]]
name = "wall3d"
path = "./wall3d.rs"
