[package]
name    = "nphysics-examples"
version = "0.1.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]

[dependencies.nphysics2df32]
path = "../build/nphysics2df32"

[dependencies.nphysics3df32]
path = "../build/nphysics3df32"

[dependencies.nphysics_testbed2d]
path = "./nphysics_testbed2d"

[dependencies.nphysics_testbed3d]
path = "./nphysics_testbed3d"

[[bin]]
name = "ball_vee2d"
path = "./balls_vee2d.rs"

[[bin]]
name = "ball_vee3d"
path = "./balls_vee3d.rs"

[[bin]]
name = "bezier_balls3d"
path = "./bezier_balls3d.rs"

[[bin]]
name = "boxes_vee2d"
path = "./boxes_vee2d.rs"

[[bin]]
name = "boxes_vee3d"
path = "./boxes_vee3d.rs"

[[bin]]
name = "compound2d"
path = "./compound2d.rs"

[[bin]]
name = "compound3d"
path = "./compound3d.rs"

[[bin]]
name = "cross2d"
path = "./cross2d.rs"

[[bin]]
name = "cross3d"
path = "./cross3d.rs"

[[bin]]
name = "mesh2d"
path = "./mesh2d.rs"

[[bin]]
name = "mesh3d"
path = "./mesh3d.rs"

[[bin]]
name = "primitives3d"
path = "./primitives3d.rs"

[[bin]]
name = "pyramid2d"
path = "./pyramid2d.rs"

[[bin]]
name = "pyramid3d"
path = "./pyramid3d.rs"

[[bin]]
name = "ragdoll2d"
path = "./ragdoll2d.rs"

[[bin]]
name = "ragdoll3d"
path = "./ragdoll3d.rs"

[[bin]]
name = "wall2d"
path = "./wall2d.rs"

[[bin]]
name = "wall3d"
path = "./wall3d.rs"

[[bin]]
name = "gravity2d"
path = "./gravity2d.rs"

[[bin]]
name = "gravity3d"
path = "./gravity3d.rs"

[[bin]]
name = "convex3d"
path = "./convex3d.rs"

[[bin]]
name = "convex_decomposition3d"
path = "./convex_decomposition3d.rs"


[[bin]]
name = "bug_11"
path = "./regression_tests/bug_11.rs"

[[bin]]
name = "bug_long_thin_box_one_shot_manifold"
path = "./regression_tests/bug_long_thin_box_one_shot_manifold.rs"

[[bin]]
name = "bug_optimization_on_patch_boundaries_does_not_converge"
path = "./regression_tests/bug_optimization_on_patch_boundaries_does_not_converge.rs"

[[bin]]
name = "bug_excentric_convex3d"
path = "./known_bugs/bug_excentric_convex3d.rs"

