[package]
name    = "nphysics-examples-2d"
version = "0.1.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]

[dependencies]
rand       = "0.5"
alga       = "0.5"
nalgebra   = "0.15"
ncollide2d = "0.15"

[dependencies.nphysics_testbed2d]
path = "../nphysics_testbed2d"

[dependencies.nphysics2d]
path = "../build/nphysics2d"

[[bin]]
name = "balls_vee2"
path = "./balls_vee2.rs"

[[bin]]
name = "balls2"
path = "./balls2.rs"

[[bin]]
name = "body_status2"
path = "./body_status2.rs"

[[bin]]
name = "boxes2"
path = "./boxes2.rs"

[[bin]]
name = "collision_groups2"
path = "./collision_groups2.rs"

[[bin]]
name = "compound2"
path = "./compound2.rs"

[[bin]]
name = "constraints2"
path = "./constraints2.rs"

[[bin]]
name = "convex2"
path = "./convex2.rs"

[[bin]]
name = "cross2"
path = "./cross2.rs"

[[bin]]
name = "disable_sleeping2"
path = "./disable_sleeping2.rs"

[[bin]]
name = "gravity2"
path = "./gravity2.rs"

[[bin]]
name = "joints2"
path = "./joints2.rs"

[[bin]]
name = "multibody_limits2"
path = "./multibody_limits2.rs"

[[bin]]
name = "polyline2"
path = "./polyline2.rs"

[[bin]]
name = "pyramid2"
path = "./pyramid2.rs"

[[bin]]
name = "ragdoll2"
path = "./ragdoll2.rs"

[[bin]]
name = "sensor2"
path = "./sensor2.rs"

[[bin]]
name = "wall2"
path = "./wall2.rs"
