[package]
name    = "nphysics-examples-2d"
version = "0.1.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]
edition = "2018"

[dependencies]
rand       = "0.6"
alga       = "0.9"
nalgebra   = "0.18"
ncollide2d = "0.19"

[dependencies.nphysics_testbed2d]
path = "../nphysics_testbed2d"

[dependencies.nphysics2d]
path = "../build/nphysics2d"

[[bin]]
name = "balls2"
path = "./balls2.rs"

[[bin]]
name = "conveyor_belt2"
path = "./conveyor_belt2.rs"

[[bin]]
name = "kinematic2"
path = "./kinematic2.rs"

[[bin]]
name = "boxes2"
path = "./boxes2.rs"

[[bin]]
name = "capsules2"
path = "./capsules2.rs"

[[bin]]
name = "collision_groups2"
path = "./collision_groups2.rs"

[[bin]]
name = "compound2"
path = "./compound2.rs"

[[bin]]
name = "constraints2"
path = "./constraints2.rs"

[[bin]]
name = "convex2"
path = "./convex2.rs"

[[bin]]
name = "cross2"
path = "./cross2.rs"

[[bin]]
name = "disable_sleeping2"
path = "./disable_sleeping2.rs"

[[bin]]
name = "force_generator2"
path = "./force_generator2.rs"

[[bin]]
name = "multibody2"
path = "./multibody2.rs"

[[bin]]
name = "polyline2"
path = "./polyline2.rs"

[[bin]]
name = "heightfield2"
path = "./heightfield2.rs"

[[bin]]
name = "pyramid2"
path = "./pyramid2.rs"

[[bin]]
name = "ragdoll2"
path = "./ragdoll2.rs"

[[bin]]
name = "sensor2"
path = "./sensor2.rs"

[[bin]]
name = "wall2"
path = "./wall2.rs"

[[bin]]
name = "mass_spring_system2"
path = "./mass_spring_system2.rs"

[[bin]]
name = "mass_constraint_system2"
path = "./mass_constraint_system2.rs"

[[bin]]
name = "fem_surface2"
path = "./fem_surface2.rs"

[[bin]]
name = "plasticity2"
path = "./plasticity2.rs"