[package]
name    = "nphysics_testbed2d"
version = "0.1.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]
description = "Testbed for the 2-dimensional physics engine in Rust."
homepage = "http://nphysics.org"
repository = "https://github.com/sebcrozet/nphysics"
keywords = [ "physics", "dynamics", "rigid", "real-time", "joints" ]
license = "BSD-3-Clause"

[lib]
name = "nphysics_testbed2d"

[dependencies]
num-traits = "0.2"
time       = "0.1"
rand       = "0.5"
nalgebra   = "0.16"
kiss3d     = "0.16"
ncollide2d = "0.17"
log        = "0.4.3"

[dependencies.nphysics2d]
path = "../build/nphysics2d"
version = "0.9"
