[package]
name    = "nphysics_testbed2d"
version = "0.5.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]
description = "Testbed for the 2-dimensional physics engine in Rust."
homepage = "http://nphysics.org"
repository = "https://github.com/rustsim/nphysics"
keywords = [ "physics", "dynamics", "rigid", "real-time", "joints" ]
license = "BSD-3-Clause"
edition = "2018"


[lib]
name = "nphysics_testbed2d"

[dependencies]
log        = { version = "0.4", optional = true }
num-traits = "0.2"
time       = "0.1"
rand       = "0.6"
nalgebra   = "0.18"
kiss3d     = "0.19"
ncollide2d = "0.19"

[dependencies.nphysics2d]
path = "../build/nphysics2d"
version = "0.11"
