[package]
name    = "nphysics_testbed3d"
version = "0.1.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]
description = "Testbed for the 2-dimensional physics engine in Rust."
homepage = "http://nphysics.org"
repository = "https://github.com/sebcrozet/nphysics"
keywords = [ "physics", "dynamics", "rigid", "real-time", "joints" ]
license = "BSD-3-Clause"
edition = "2018"


[lib]
name = "nphysics_testbed3d"

[dependencies]
num-traits = "0.2"
time       = "0.1"
rand       = "0.5"
nalgebra   = "0.16"
kiss3d     = "0.17"
ncollide3d = "0.17"

[dependencies.nphysics3d]
path = "../build/nphysics3d"
version = "0.9"
