[package]
name    = "graphics2d"
version = "0.1.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]

[[lib]]
name       = "graphics2d"
crate_type = [ "dylib", "rlib" ]

[dependencies.nphysics2df32]
path = "../../build/nphysics2df32"

[dependencies.rust-sfml]
git = "https://github.com/sebcrozet/rust-sfml"
