[package]
name    = "nphysics_testbed2d"
version = "0.1.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]

[lib]
name = "nphysics_testbed2d"

[dependencies.nphysics]
features = [ "2df32" ]
path = "../.."

[dependencies.rust-sfml]
git = "https://github.com/jeremyletang/rust-sfml"

[dependencies.time]
git = "https://github.com/rust-lang/time"

[dependencies.nalgebra]
git = "https://github.com/sebcrozet/nalgebra"

[dependencies.ncollide]
git = "https://github.com/sebcrozet/ncollide"
