[package]
name    = "nphysics_testbed3d"
version = "0.1.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]

[lib]
name = "nphysics_testbed3d"

[dependencies]
nalgebra = "*"
time = "*"
rand = "*"
glfw = "*"
ncollide = "*"
kiss3d = "*"

[dependencies.nphysics]
features = [ "3df32" ]
path = "../.."
