[package]
name    = "nphysics_testbed3d"
version = "0.1.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]

[lib]
name = "nphysics_testbed3d"

[dependencies]
nalgebra = "0.9.*"
time = "0.1.*"
rand = "0.3.*"
glfw = "0.8.*"
ncollide = "*"
kiss3d = "*"

[dependencies.nphysics3d]
path = "../../build/nphysics3d"
